# jetson_code

./: .gitignore  camera_test.py  fps_counter.py  run_camera.py  run_foosball.py  serial_interface.py  tableconfig.py  track_visualizer.py
calibrations/: goalie.anglecal  offense.anglecal
foosball/: __init__.py  angle_finder.py  camera.py  controller.py  perception_utils.py  planner.py  serial_interface.py  timer.py
models/: PaddleBehavior-27999927.pt  ar.onnx
test_code/: CMakeLists.txt  angle_finder.py  calib_to_csv.py  calibrate_angle.py  camera_seg.py  camera_test.py  get_transform.py  goalie.calib  goalie.csv  make_network.py  offense.calib  offense.csv  opencv_test.cpp  ranger.py  save_frame.py  stepper_test.py
